force-app/main/default/objects/Hazard_Card__c/Hazard_Card__c.object-meta.xml
<CustomObject>
    <label>Hazard Card</label>
    <nameField>
        <label>Hazard Card #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hazard Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>