force-app/main/default/objects/Hazard_Card__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset  #</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipName>Hazard_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>