force-app/main/default/objects/Hazard_Card__c/fields/Associated_Hazard__c.field-meta.xml
<CustomField>
    <fullName>Associated_Hazard__c</fullName>
    <description>Identify the associated hazards with the type of hazard indentified</description>
    <label>Associated Hazard</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Hazard_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOP or wellhead pressure risks</fullName>
            </value>
            <value>
                <fullName>Caught between/moving equipment</fullName>
            </value>
            <value>
                <fullName>Caught between rig tongs, pipe, or moving equipment</fullName>
            </value>
            <value>
                <fullName>Cluttered work area</fullName>
            </value>
            <value>
                <fullName>Correct use of tools, controls, or PPE</fullName>
            </value>
            <value>
                <fullName>Damaged cables, poor grounding</fullName>
            </value>
            <value>
                <fullName>Fuel or oil spills</fullName>
            </value>
            <value>
                <fullName>Gas releases or lack of gas detection</fullName>
            </value>
            <value>
                <fullName>Good catch, stop-work use</fullName>
            </value>
            <value>
                <fullName>H2S exposure risk areas</fullName>
            </value>
            <value>
                <fullName>Handling of mud, fuel, or solvents</fullName>
            </value>
            <value>
                <fullName>Hot work near flammables</fullName>
            </value>
            <value>
                <fullName>Improper isolation or pressure release</fullName>
            </value>
            <value>
                <fullName>Improper rigging or lifting gear</fullName>
            </value>
            <value>
                <fullName>Improper waste handling</fullName>
            </value>
            <value>
                <fullName>Inadequate PPE use</fullName>
            </value>
            <value>
                <fullName>Inadequate ventilation or monitoring</fullName>
            </value>
            <value>
                <fullName>Incomplete ladder safety</fullName>
            </value>
            <value>
                <fullName>Lack of fall protection or harness use</fullName>
            </value>
            <value>
                <fullName>Lack of gas testing or entry permits</fullName>
            </value>
            <value>
                <fullName>Lack of spotters or poor communication</fullName>
            </value>
            <value>
                <fullName>Leaking valves, hoses, or fittings</fullName>
            </value>
            <value>
                <fullName>Lifting heavy items without aids</fullName>
            </value>
            <value>
                <fullName>Light vehicle or forklift movement on site</fullName>
            </value>
            <value>
                <fullName>Missing handrails or guardrails</fullName>
            </value>
            <value>
                <fullName>Missing or inadequate use of required PPE</fullName>
            </value>
            <value>
                <fullName>Muscle Sprain / Strain</fullName>
            </value>
            <value>
                <fullName>Not following SOPs or JSA deviations</fullName>
            </value>
            <value>
                <fullName>Poor storage, cluttered work zones</fullName>
            </value>
            <value>
                <fullName>Power swivel or drawworks risks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>