force-app/main/default/objects/Hazard_Card__c/fields/Associated_Risks__c.field-meta.xml
<CustomField>
    <fullName>Associated_Risks__c</fullName>
    <inlineHelpText>What are the risks associated with the hazard</inlineHelpText>
    <label>Associated Risks</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>