force-app/main/default/objects/Hazard_Card__c/fields/Closed_Immediately__c.field-meta.xml
<CustomField>
    <fullName>Closed_Immediately__c</fullName>
    <label>Action Taken</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>