force-app/main/default/objects/Hazard_Card__c/fields/Consequence__c.field-meta.xml
<CustomField>
    <fullName>Consequence__c</fullName>
    <inlineHelpText>The conseqence if the risks were realised</inlineHelpText>
    <label>Consequence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Slight</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Serious</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Catastrophic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>