force-app/main/default/objects/Hazard_Card__c/fields/Daily_Site_Job__c.field-meta.xml
<CustomField>
    <fullName>Daily_Site_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Site Job</label>
    <referenceTo>Daily_Report__c</referenceTo>
    <relationshipLabel>Hazard Cards</relationshipLabel>
    <relationshipName>Hazard_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>