force-app/main/default/objects/Hazard_Card__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <description>Responsibility of Unit Manager to ensure all Hazards are actioned asap.  Monitored by Safety Department</description>
    <inlineHelpText>Date when Hazard is closed - may be immediate or when work order is complete.</inlineHelpText>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>