force-app/main/default/objects/Hazard_Card__c/fields/Follow_Up_Action__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Action__c</fullName>
    <inlineHelpText>One/more of the following forms may need to be completed and sent to Manager</inlineHelpText>
    <label>Follow Up Action</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Material Request/Purchase Order</fullName>
            </value>
            <value>
                <fullName>Work Order - Fault Report</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>