force-app/main/default/objects/Hazard_Card__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <inlineHelpText>Likelihood of how frequent the risk will occur</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Almost Certain</fullName>
            </value>
            <value>
                <fullName>Likely</fullName>
            </value>
            <value>
                <fullName>Possible</fullName>
            </value>
            <value>
                <fullName>Unlikely</fullName>
            </value>
            <value>
                <fullName>Rare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>