force-app/main/default/objects/Hazard_Card__c/fields/Hazard_Description__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Description__c</fullName>
    <inlineHelpText>Describe the Hazard that has been noticed</inlineHelpText>
    <label>Hazard Descritpion</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>