force-app/main/default/objects/Hazard_Card__c/fields/Hazard_Locations__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Locations__c</fullName>
    <label>Hazard Locations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>Air Packs</fullName>
            </value>
            <value>
                <fullName>Base/Shed</fullName>
            </value>
            <value>
                <fullName>Blooie Line</fullName>
            </value>
            <value>
                <fullName>Camp</fullName>
            </value>
            <value>
                <fullName>Catwalk</fullName>
            </value>
            <value>
                <fullName>Combo Shack</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Mud Pump</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pipe Racks</fullName>
            </value>
            <value>
                <fullName>Rig Carrier</fullName>
            </value>
            <value>
                <fullName>Trailers</fullName>
            </value>
            <value>
                <fullName>Vehicles</fullName>
            </value>
            <value>
                <fullName>Work Floor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>