force-app/main/default/objects/Hazard_Card__c/fields/Hazard_Potential__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Potential__c</fullName>
    <label>Hazard Potential</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Caught in rotating equipment</fullName>
            </value>
            <value>
                <fullName>Chemical Exposure to Person</fullName>
            </value>
            <value>
                <fullName>Dropped Object</fullName>
            </value>
            <value>
                <fullName>Environmental Impact/Spill</fullName>
            </value>
            <value>
                <fullName>Equipment Damage</fullName>
            </value>
            <value>
                <fullName>Equipment Failure</fullName>
            </value>
            <value>
                <fullName>Exposure to Electricity</fullName>
            </value>
            <value>
                <fullName>Exposure to Fatigue</fullName>
            </value>
            <value>
                <fullName>Exposure to Heat/Cold</fullName>
            </value>
            <value>
                <fullName>Exposure to Stored Energy</fullName>
            </value>
            <value>
                <fullName>Fall from Heights</fullName>
            </value>
            <value>
                <fullName>Fall on Same Level</fullName>
            </value>
            <value>
                <fullName>Fire/Explosion</fullName>
            </value>
            <value>
                <fullName>Hearing Damage</fullName>
            </value>
            <value>
                <fullName>Hit by Moving Equipment/Machine/Vehicle</fullName>
            </value>
            <value>
                <fullName>Loss of Well Control</fullName>
            </value>
            <value>
                <fullName>Muscle Strain / Sprain</fullName>
            </value>
            <value>
                <fullName>Unauthorized Access to Site/Work Area</fullName>
            </value>
            <value>
                <fullName>Vehicle Accident</fullName>
            </value>
            <value>
                <fullName>Vibration Exposure</fullName>
            </value>
            <value>
                <fullName>Slips, Trips &amp; Falls</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>