force-app/main/default/objects/Hazard_Card__c/fields/Hazard_Type__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Type__c</fullName>
    <label>Hazard Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tool Misuse</fullName>
            </value>
            <value>
                <fullName>Slip/Trip/Fall</fullName>
            </value>
            <value>
                <fullName>Non Routine Task</fullName>
            </value>
            <value>
                <fullName>Vehicles</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Housekeeping</fullName>
            </value>
            <value>
                <fullName>PPE Related</fullName>
            </value>
            <value>
                <fullName>Incorrect Procedure</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>