force-app/main/default/objects/Hazard_Card__c/fields/Imediate_Actions_Taken__c.field-meta.xml
<CustomField>
    <fullName>Imediate_Actions_Taken__c</fullName>
    <inlineHelpText>Action Taken by person who reported the hazard</inlineHelpText>
    <label>Immediate Actions Taken</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>