force-app/main/default/objects/Hazard_Card__c/fields/Operations_at_Time__c.field-meta.xml
<CustomField>
    <fullName>Operations_at_Time__c</fullName>
    <label>Operations at Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party Op&apos;s</fullName>
            </value>
            <value>
                <fullName>Air Op&apos;s</fullName>
            </value>
            <value>
                <fullName>Camp Move</fullName>
            </value>
            <value>
                <fullName>Fuel Delivery</fullName>
            </value>
            <value>
                <fullName>Operations - Camp</fullName>
            </value>
            <value>
                <fullName>Operations - Rig</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pumping Op&apos;s</fullName>
            </value>
            <value>
                <fullName>Rig Move</fullName>
            </value>
            <value>
                <fullName>Rig Up/Down - Camp</fullName>
            </value>
            <value>
                <fullName>Rig Up/Down - Rig</fullName>
            </value>
            <value>
                <fullName>Septic Removal</fullName>
            </value>
            <value>
                <fullName>Water Delivery/Removal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>