force-app/main/default/objects/Hazard_Card__c/fields/Ops_Manager_Report__c.field-meta.xml
<CustomField>
    <fullName>Ops_Manager_Report__c</fullName>
    <inlineHelpText>Provide feedback on how hazard card was completed or advice on further immediate action/Mitigation required</inlineHelpText>
    <label>Ops Manager Progress Report</label>
    <type>TextArea</type>
</CustomField>