force-app/main/default/objects/Hazard_Card__c/fields/Potential_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Potential_Outcome__c</fullName>
    <label>Potential Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Damage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>