force-app/main/default/objects/Hazard_Card__c/fields/Reported__c.field-meta.xml
<CustomField>
    <fullName>Reported__c</fullName>
    <inlineHelpText>This field is used when the Hazard is reported by a person who is at a Wild Desert Site but not an employee eg. Company Man</inlineHelpText>
    <label>Reported By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>