force-app/main/default/objects/Hazard_Card__c/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>This is used when the Hazard is reported by a Wild Desert employee.  Allows us to track the employees who produce Hazard Cards</inlineHelpText>
    <label>Reported By (WD)</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Hazard Cards (Reported By)</relationshipLabel>
    <relationshipName>Hazard_Cards</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>