force-app/main/default/objects/Hazard_Card__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Well/Camp/Base of unit at the time the hazard occurred</inlineHelpText>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipName>Hazard_Cards</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>