force-app/main/default/objects/Hazard_Card__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Unit #</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipName>Hazard_Cards</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>