force-app/main/default/objects/Hazard_Card__c/fields/Unit_Manager__c.field-meta.xml
<CustomField>
    <fullName>Unit_Manager__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Unit Manager</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Hazard_Cards1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>