force-app/main/default/objects/Hazard_Card__c/fields/Unit_Manager_Report__c.field-meta.xml
<CustomField>
    <fullName>Unit_Manager_Report__c</fullName>
    <inlineHelpText>Provide details on any actions taken</inlineHelpText>
    <label>Unit Manager Progress Report</label>
    <type>TextArea</type>
</CustomField>