force-app/main/default/objects/Hazard_Card__c/fields/WDR__c.field-meta.xml
<CustomField>
    <fullName>WDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WDR #</label>
    <referenceTo>WD_Report__c</referenceTo>
    <relationshipLabel>Hazard Cards</relationshipLabel>
    <relationshipName>Hazard_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>