force-app/main/default/objects/Hazard_Card__c/fields/Work_Order_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Submitted__c</fullName>
    <label>Work Order Submitted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>