force-app/main/default/objects/Hazard_Card__c/recordTypes/Hazard_Card.recordType-meta.xml
<RecordType>
    <fullName>Hazard_Card</fullName>
    <active>true</active>
    <label>Hazard Card</label>
</RecordType>