force-app/main/default/objects/Hazard_Card__c/listViews/c2_all_hazards.listView-meta.xml
<ListView>
    <fullName>c2_all_hazards</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Date__c</columns>
    <columns>Hazard_Description__c</columns>
    <columns>Imediate_Actions_Taken__c</columns>
    <columns>Risk_Rating__c</columns>
    <columns>Unit_Manager__c</columns>
    <columns>Unit_Manager_Report__c</columns>
    <columns>Ops_Manager_Report__c</columns>
    <columns>Date_Closed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>camp 2</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:365</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Hazard_Card__c.Hazard_Card</value>
    </filters>
    <label>Camp #2 - Hazard Register</label>
    <sharedTo>
        <group>Camp_2</group>
        <group>Camp_Supervisor</group>
        <group>OPs_super</group>
        <group>Safety</group>
    </sharedTo>
</ListView>